# 4883-SoftwareTools-Santos

./: .replit  README.md  pyproject.toml
Assignments/: README.md
Assignments/A01/: README.md
Assignments/A03/: README.md  bst.dot
Assignments/A04/: README.md  family.json  family_tree.dot  main-2.py
Assignments/A06/: README.md
Assignments/A07/: README.md  main-10.py
Assignments/A08/: README.md  main-8.py
