[tool.poetry]
name = "repl_nix_4883-SoftwareTools-Santos"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
graphviz = "^0.20.1"
PySimpleGUI = "^4.60.5"
selenium = "^4.10.0"
selenium-wire = "^5.1.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
